--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ body {
     background-color: #d5f4e6;
 }
 nav ul, footer ul {
+    font-size: 2.0em
     font-family:'Palatino Linotype', 'Book Antiqua', 'Palatino', 'serif';
     padding: 0px;
     list-style: none;
